--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Plane Old TicTacToe</string>
+
+    <string name="key_row">ROW</string>
+    <string name="key_col">COL</string>
 </resources>
